# SDL_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: objekt.h
src/: main.cpp  objekt.cpp
